<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.eventappucsd.activity.EnterEventInfoActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEventName"
        android:hint="@string/name_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/date_hint"
        android:ems="10"
        android:id="@+id/editTextDate"
        android:layout_below="@+id/editTextEventName"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/time_hint"
        android:ems="10"
        android:id="@+id/editTextTime"
        android:layout_below="@+id/editTextDate"
        android:layout_alignStart="@+id/editTextDate"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLocation"
        android:hint="@string/location_hint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/description_hint"
        android:id="@+id/editTextDescription"
        android:layout_below="@+id/editTextLocation"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Event"
        android:id="@+id/addRecord"
        android:layout_below="@+id/editTextDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />
    <!--android:onClick="addEventToDatabase"-->


</RelativeLayout>
