<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="Trending Events"
        android:focusable="false"
        android:password="false"
        android:visibility="visible" />

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimaryDark"
        android:background="#f8f8f8"
        android:descendantFocusability="blocksDescendants"
        android:dividerHeight="2dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/list_header">

    </ListView>

</RelativeLayout>
